# QRD-IO

./: .gitignore  App.jsx  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Roadmap.md  SECURITY.md  VERIFICATION_PHASE0.md  clippy.toml  rustfmt.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benches/: all.rs  columnar_read.rs  columnar_write.rs  encryption.rs
core/: Cargo.toml
core/src/: encoding.rs  error.rs  format.rs  lib.rs  reader.rs  types.rs  writer.rs
core/src/columnar/: mod.rs
core/src/compression/: mod.rs
core/src/encoding/: mod.rs
core/src/encryption/: mod.rs
core/src/footer/: mod.rs
core/src/header/: mod.rs
core/src/integrity/: mod.rs
core/src/io/: mod.rs
core/src/reader/: mod.rs
core/src/writer/: mod.rs
docs/examples/: QUICK_START.md
docs/security/: CRYPTOGRAPHY.md
docs/spec/: BINARY_FORMAT.md
examples/rust/: basic_usage.rs
scripts/: build.sh
sdk/node/: package.json
sdk/node/src/: index.ts
sdk/python/: README.md  setup.cfg
sdk/python/src/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/wasm/: Cargo.toml
sdk/wasm/src/: lib.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: crypto.rs  parser.rs
tests/unit/: mod.rs
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
