[workspace]
members = [
    "core",
    "sdk/rust",
    "sdk/wasm",
    "tools/cli",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["QRD Contributors"]
license = "BSL-1.1"
repository = "https://github.com/nafal-faturizki/QRD-IO"
homepage = "https://docs.qrd.dev"
documentation = "https://docs.rs/qrd-core"
keywords = ["qrd", "columnar", "encryption", "analytics", "streaming"]
categories = ["encoding", "compression", "cryptography", "embedded"]

[workspace.dependencies]
# Core crypto
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
hkdf = "0.12"
zeroize = { version = "1.6", features = ["std", "derive"] }
getrandom = { version = "0.2", features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.3"
criterion = "0.5"
rand = "0.8"
bytes = "1.5"

# Compression (optional)
lz4_flex = "0.11"
zstd = "0.13"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
