[metadata]
name = qrd-sdk
version = 1.0.0
author = QRD Contributors
license = BSL-1.1
description = QRD-SDK Python - Privacy-native columnar binary container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nafal-faturizki/QRD-IO
keywords = qrd, columnar, encryption, analytics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pycryptodome>=3.18

[options.packages.find]
where = src
